--- a/about.html
+++ b/about.html
@@ -74,7 +74,7 @@ Make sure your internet connection is active .
 * Open the cashtube application . 
 * Click on the sign up button . 
 * Enter your name and number correctly and click on submit . 
-Enter your full name and email address correctly then click on the pay button . Make your payment of 5500 to the </h2>
+Enter your full name and email address correctly then click on the pay button . Make your payment of 5500 to the account details provided by the application </h2>
     <p>
          
       
