--- a/contact.html
+++ b/contact.html
@@ -6,10 +6,11 @@
   <title>Contact Us</title>
   <style>
     body {
-      font-family: Arial, sans-serif;
+      font-family: "Verdana", sans-serif;
       margin: 0;
       padding: 0;
       background-color: #f4f4f9;
+      color: #333;
     }
 
     .container {
@@ -36,15 +37,16 @@
       margin-bottom: 10px;
     }
 
-    .contact-info p, .assistance-categories ul li, footer p {
+    .contact-info p, .assistance-categories ul li, footer p, .about-section p {
       font-size: 16px;
-      line-height: 1.5;
+      line-height: 1.6;
       color: #555;
     }
 
     a {
       color: #4a90e2;
       text-decoration: none;
+      font-weight: bold;
     }
 
     a:hover {
@@ -58,6 +60,10 @@
 
     .assistance-categories ul li {
       margin-bottom: 10px;
+    }
+
+    .about-section {
+      margin-top: 20px;
     }
 
     footer {
@@ -81,6 +87,7 @@
         <p>⏰ Availability: [24/7]</p>
         <p>⏳ Response Time: [2mins]</p>
       </section>
+
       <section class="assistance-categories">
         <h2>Assistance Categories</h2>
         <ul>
@@ -89,6 +96,13 @@
           <li>🛒 Orders and Returns for [Passcode]</li>
         </ul>
       </section>
+
+      <section class="about-section">
+        <h2>About Us</h2>
+        <p>Welcome to GoPay, your trusted companion for seamless financial solutions. Our platform is designed to make your transactions easier, faster, and more secure. Whether you need assistance with payments, orders, or technical support, we are available 24/7 to serve you.</p>
+        <p>📺 Learn more about how to use our app: <a href="https://youtu.be/3oijAgLhWuM?si=Rb3GybmrILC_VlSq" target="_blank">Watch Video Tutorial</a></p>
+      </section>
+      
       <footer>
         <p>👉 Feel free to send us a message, and we'll get back to you as soon as possible!</p>
       </footer>
