--- a/contact.html
+++ b/contact.html
@@ -83,7 +83,7 @@
       <section class="contact-info">
         <h2>Contact Information</h2>
         <p>📞 Whatsapp Number: <a href="https://wa.me/2349129165186" target="_blank">+234 912 916 5186</a></p>
-        <p>📞 Whatsapp Group: <a href="https://chat.whatsapp.com/C8Ta8PFkVJ8Jk3gjgjdTJ8" target="_blank">Click Here</a></p>
+        <p>📞 Whatsapp Group: <a href="https://whatsapp.com/channel/0029Vb0LIVTC6ZvqkvIcrv0N" target="_blank">Click Here</a></p>
         <p>⏰ Availability: [24/7]</p>
         <p>⏳ Response Time: [2mins]</p>
       </section>
